{"maps":[{"name":"XInputGamepad","actions":[{"name":"WalkLeft","bindings":[]},{"name":"WalkRight","bindings":[]},{"name":"Idle","bindings":[]},{"name":"RunLeft","bindings":[]},{"name":"RunRight","bindings":[]},{"name":"Jump","bindings":[]},{"name":"ShortHop","bindings":[]},{"name":"Crouch","bindings":[]},{"name":"Jab","bindings":[]},{"name":"NeutralSpecial","bindings":[]}],"bindings":[{"name":"","path":"<XInputController>/leftStick/left","interactions":"","groups":"","action":"action","chainWithPrevious":false,"isComposite":false,"isPartOfComposite":false,"modifiers":""},{"name":"","path":"<XInputController>/leftStick/right","interactions":"","groups":"","action":"walkRight","chainWithPrevious":false,"isComposite":false,"isPartOfComposite":false,"modifiers":""},{"name":"","path":"<XInputController>/leftStick/left","interactions":"","groups":"","action":"walkLeft","chainWithPrevious":false,"isComposite":false,"isPartOfComposite":false,"modifiers":""},{"name":"","path":"<XInputController>/buttonNorth","interactions":"Tap","groups":"","action":"ShortHop","chainWithPrevious":false,"isComposite":false,"isPartOfComposite":false,"modifiers":""},{"name":"","path":"<XInputController>/leftStick/right","interactions":"Hold","groups":"","action":"RunRight","chainWithPrevious":false,"isComposite":false,"isPartOfComposite":false,"modifiers":""},{"name":"","path":"<XInputController>/leftStick/left","interactions":"Hold","groups":"","action":"RunLeft","chainWithPrevious":false,"isComposite":false,"isPartOfComposite":false,"modifiers":""},{"name":"","path":"<XInputController>/buttonNorth","interactions":"SlowTap","groups":"","action":"Jump","chainWithPrevious":false,"isComposite":false,"isPartOfComposite":false,"modifiers":""},{"name":"","path":"<XInputController>/buttonEast","interactions":"","groups":"","action":"Jab","chainWithPrevious":false,"isComposite":false,"isPartOfComposite":false,"modifiers":""},{"name":"","path":"<XInputController>/leftStick/down","interactions":"","groups":"","action":"Crouch","chainWithPrevious":false,"isComposite":false,"isPartOfComposite":false,"modifiers":""},{"name":"","path":"<XInputController>/buttonSouth","interactions":"","groups":"","action":"NeutralSpecial","chainWithPrevious":false,"isComposite":false,"isPartOfComposite":false,"modifiers":""}]}]}